nvidia-x11-config (0.0.3)  nitrux; urgency=medium

  * Add deps to package.

 -- Uri Herrera <uri_herrera@nxos.org>  Sun, 28 Mar 2021 10:07:00 -0500

nvidia-x11-config (0.0.2)  nitrux; urgency=medium

  * Add xtrace.

 -- Uri Herrera <uri_herrera@nxos.org>  Fri, 22 Jan 2021 03:28:00 -0500

nvidia-x11-config (0.0.1)  nitrux; urgency=medium

  * Create package.

 -- Uri Herrera <uri_herrera@nxos.org>  Thu, 21 Jan 2021 16:48:00 -0500