@@ -4,7 +4,6 @@ apt -qq update
 apt -qq -yy install equivs curl git
 
 ### Install Dependencies
-apt -qq -yy dist-upgrade
 apt -qq -yy install devscripts lintian build-essential automake autotools-dev
 mk-build-deps -i -t "apt-get --yes" -r
 
