@@ -1,3 +1,9 @@
+nvidia-x11-config (0.0.4)  nitrux; urgency=medium
+
+  * Add deps to package.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Tue, 07 Mar 2021 16:33:00 -0500
+
 nvidia-x11-config (0.0.3)  nitrux; urgency=medium
 
   * Add deps to package.
